# sclent

./: .gitignore  LICENSE  Makefile  sclent.cabal
data/: Für Pavlik für Tool-Crawl.xlsx  backlinks-found.txt  backlinks-not-found.txt  domain_names.txt  domain_names.xls  invalid-links.txt  result.csv  valid-links.txt
src/: Sclent.hs
src/Da/: Http.hs  PageDa.hs
src/Model/: Crawler.hs
src/Service/: CrawlerService.hs
tests/: RunTests.hs
tests/System/: CrawlerServiceTest.hs
tests/Unit/Model/: CrawlerTest.hs
tests/Unit/Service/: CrawlerServiceTest.hs
