name:                sclent
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Pavlo Kerestey
build-type:          Simple
cabal-version:       >=1.8

executable sclent
  main-is:             Sclent.hs
  hs-source-dirs:      src
  Ghc-Options:         -threaded
  build-depends:       base == 4.3.1.0
                      ,bytestring == 0.9.1.10
                      ,download-curl == 0.1.4
                      ,HTTP == 4000.2.2
                      ,network == 2.3.0.11
                      ,tagsoup == 0.12.6
                      ,text == 0.11.1.13

executable run_tests
  main-is:             RunTests.hs
  hs-source-dirs:      src, tests
  Ghc-Options:         -threaded
  build-depends:       base == 4.3.1.0
                      ,bytestring == 0.9.1.10
                      ,download-curl == 0.1.4
                      ,HTTP == 4000.2.2
                      ,HUnit == 1.2.4.2
                      ,network == 2.3.0.11
                      ,tagsoup == 0.12.6
                      ,text == 0.11.1.13
