name:                sclent
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Pavlo Kerestey
build-type:          Simple
cabal-version:       >=1.8

executable sclent
  main-is:             Sclent.hs
  hs-source-dirs:      src
  Ghc-Options:         -threaded -Wall
  build-depends:       base == 4.3.1.0
                      ,bytestring == 0.9.1.10
                      ,enumerator == 0.4.18
                      ,http-enumerator == 0.7.3.2
                      ,http-types == 0.6.10
                      ,tagsoup == 0.12.6
                      ,text == 0.11.1.13
                      ,transformers == 0.2.2.0

executable run_tests
  main-is:             RunTests.hs
  hs-source-dirs:      src, tests
  Ghc-Options:         -threaded -Wall
  build-depends:       base == 4.3.1.0
                      ,bytestring == 0.9.1.10
                      ,enumerator == 0.4.18
                      ,http-enumerator == 0.7.3.2
                      ,http-types == 0.6.10
                      ,HUnit == 1.2.4.2
                      ,tagsoup == 0.12.6
                      ,text == 0.11.1.13
                      ,transformers == 0.2.2.0
